[package]
name = "env_logger"
version = "0.3.2"
authors = ["The Rust Project Developers"]
license = "MIT/Apache-2.0"
repository = "https://github.com/rust-lang/log"
documentation = "http://doc.rust-lang.org/log/env_logger"
homepage = "https://github.com/rust-lang/log"
description = """
An logging implementation for `log` which is configured via an environment
variable.
"""

[dependencies.log]
version = "0.3"
path = ".."

[dependencies]
regex = "0.1"
