[package]
name = "env_logger"
version = "0.4.3"
authors = ["The Rust Project Developers"]
license = "MIT/Apache-2.0"
repository = "https://github.com/rust-lang/log"
documentation = "http://doc.rust-lang.org/log/env_logger"
homepage = "https://github.com/rust-lang/log"
description = """
A logging implementation for `log` which is configured via an environment
variable.
"""
categories = ["development-tools::debugging"]

[dependencies]
log = { version = "0.3", path = ".." }
regex = { version = "0.2", optional = true }

[[test]]
name = "regexp_filter"
harness = false

[features]
default = ["regex"]
