[package]
name = "integration"
version = "0.1.0"
edition = "2021"
publish = false
build = "src/build.rs"

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(lib_build)'] }

[features]
std = ["log/std"]
kv = ["log/kv"]
kv_std = ["log/kv_std"]
kv_sval = ["log/kv_sval"]
kv_serde = ["log/kv_serde"]

[dependencies.log]
path = ".."

[dev-dependencies.rustversion]
version = "1.0"
